# run_streamlit_with_uvx

./: pyproject.toml
src/run_streamlit_with_uvx/: launch.py
