[project]
name = "run-streamlit-with-uvx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.41.1",
]

[project.scripts]
run_streamlit_with_uvx = "run_streamlit_with_uvx.launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
